Implememented Drop CheckIn + Refactorings

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -7,7 +7,7 @@
 		{{arrivalItemVM.customerName}}
 	</div>
 	<div class="body">
-		<div class="room-type">{{ arrivalItemVM.roomCategory }}</div>
+		<div class="room-type">{{ arrivalItemVM.roomCategoryLabel}}</div>
 		<div class="booking-quick-details">
 			<div class="period">
 				<div class="start-date">{{arrivalItemVM.arrivalLabel}}</div>
