--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/components/departure-item/template/departure-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/components/departure-item/template/departure-item.html
@@ -1,21 +1,24 @@
-<div class="header clickable">
-	<span><b>{{departureItemVM.roomName}}</b></span>
-	<span>{{departureItemVM.clientName}}</span>
-</div>
-<div class="body">
-	<div class="room-type">{{departureItemVM.roomType}}</div>
-	<div class="booking-quick-details">
-		<div class="period orange-color">
-			<span class="unitpal-font clickable f-12 p-r-6">-</span>
-		</div>
-		<div class="other-details gray-color f-12">
-			<span class="unitpal-font f-12">(</span> {{departureItemVM.numberOfPeople}}
-			<span class="unitpal-font f-12">Y</span> {{departureItemVM.numberOfNights}}
+<div *ngIf="departureItemVM.isStayingInRoom">
+	<div class="header clickable"s>
+		<span><b class="green-color">{{departureItemVM.roomName}}</b></span>
+		<span>{{departureItemVM.customerName}}</span>
+		<div class="room-type">{{ departureItemVM.roomCategoryLabel}}</div>
+	</div>
+	<div class="body">
+		<div class="room-type">{{departureItemVM.roomCategoryLabel}}</div>
+		<div class="booking-quick-details">
+			<div class="period orange-color f-12">
+				<span class="unitpal-font clickable f-12 p-r-6">-</span><span>203 euro</span>
+			</div>
+			<div class="other-details gray-color f-12">
+				<span class="unitpal-font f-12">(</span> <span>{{departureItemVM.numberOfPeople}}</span>
+				<span class="unitpal-font f-12">Y</span> <span>{{departureItemVM.numberOfNights}}</span>
+			</div>
 		</div>
 	</div>
-</div>
-<div class="footer">
-	<button class="btn btn-sm btn-green ">
-		<span class="unitpal-font p-r-6">.</span> CHECK OUT 
-	</button>
+	<div class="footer">
+		<button class="btn btn-sm btn-green ">
+			<span class="unitpal-font p-r-6">.</span> CHECK OUT 
+		</button>
+	</div>
 </div>
