small change in room modal

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-xs-12">
             <span>
-                <i class="fa unitpal-font" title="{{'End Date' | translate}}">.</i> 
+                <i class="fa unitpal-font checkout" title="{{'End Date' | translate}}">.</i> 
                 {{ endDateLongString }}
             </span> 
         </div>
