--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
@@ -3,11 +3,11 @@
 >
 	<div class="card-header">
 		<div class="section1">
-			<div class="room-number clickable">{{ roomVM.name }}</div>
+			<div class="room-number clickable" (click)="openRoomModal()">{{ roomVM.name }}</div>
 			<div class="room-details">{{ roomVM.categoryLabel }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
-			<div class="customer-name clickable">{{ roomVM.customerName }}</div>
+			<div class="customer-name clickable" (click)="openCustomerModal()">{{ roomVM.customerName }}</div>
 			<div class="room-stats flex-row flex-center-v">
 				<!--<div *ngIf="maintenance" class="clickable f-18" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
 					<span class="unitpal-font">{{maintenance.icon}}</span>
@@ -33,7 +33,7 @@
 >
 	<div class="card-header">
 		<div class="section1">
-			<div class="room-number clickable">{{ roomVM.name }}</div>
+			<div class="room-number clickable" (click)="openRoomModal()">{{ roomVM.name }}</div>
 			<div class="room-details">{{ roomVM.categoryLabel }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
@@ -60,7 +60,7 @@
 >
 	<div class="card-header">
 		<div class="section1">
-			<div class="room-number clickable">{{ roomVM.name }}</div>
+			<div class="room-number clickable" (click)="openRoomModal()">{{ roomVM.name }}</div>
 			<div class="room-details">{{ roomVM.categoryLabel }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
@@ -86,7 +86,7 @@
 >
 	<div class="card-header">
 		<div class="section1">
-			<div class="room-number clickable">{{ roomVM.properties.name }}</div>
+			<div class="room-number clickable" (click)="openRoomModal()">{{ roomVM.properties.name }}</div>
 			<div class="room-details">{{ roomVM.roomCategory.displayName }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
