--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -3,13 +3,13 @@
 	<i class="fa fa-ellipsis-v"></i>
 </div>
 <div class="right p-6">
-	<div class="header clickable">
-		{{arrivalItemVM.customerName}}
+	<div class="header" >
+		<span class="clickable" (click)="openCustomerModal()">{{arrivalItemVM.customerName}}</span>
 	</div>
 	<div class="body">
 		<div class="room-type">{{ arrivalItemVM.roomCategoryLabel}}</div>
 		<div class="booking-quick-details">
-			<div class="period">
+			<div class="period clickable" (click)="openBookingModal()" >
 				<div class="start-date">{{arrivalItemVM.arrivalLabel}}</div>
 				<i class="fa fa-arrow-right"></i>
 				<div class="end-date">{{arrivalItemVM.departureLabel}}</div>
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<div class="footer">
-		<button class="btn btn-sm btn-danger">
+		<button class="btn btn-sm btn-danger" (click)="openCheckInModal()" >
 			CHECK IN <span class="unitpal-font">/</span>
 		</button>
 	</div>
