--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -1,9 +1,9 @@
 <loading-component [isLoading]="isLoading && !didInitOnce"></loading-component>
 
-<div class="row full-height" *ngIf="didLoadPageData">
+<div class="row full-height" *ngIf="didInitOnce">
 	<div class="col-xs-9 full-height right-margin padding-top-10px" customScroll>
 		<div class="row">
-			
+			<booking-period-editor [bookingOperationsPageData]="bookingOperationsPageData"></booking-period-editor>
 		</div>
 				
 	</div>
