--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -6,6 +6,19 @@
 			<booking-period-editor [bookingOperationsPageData]="bookingOperationsPageData"></booking-period-editor>
 		</div>
 
+		<div class="row">
+			<div class="col-xs-12 col-sm-1 padding-top-10px">
+				{{'Status' | translate}}
+			</div>
+			<div class="col-xs-12 col-sm-4">
+            <div class="form-group">
+					<div class="form-control operational-input-group non-editable" [ngClass]="bookingMeta.displayClassName">
+						<span class="unitpal-font unitpal-large">{{ bookingMeta.fontName }}</span>
+						<span class="name">{{ bookingMeta.displayName | translate }}</span>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<div class="row padding-bottom-10px">
 			<div class="col-xs-12 col-sm-1 padding-top-10px">
